// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateLinkedList should generate linked list from values 1 1`] = `
{
  "next": {
    "next": null,
    "value": null,
  },
  "value": "http://ya.ru",
}
`;

exports[`generateLinkedList should generate linked list from values 2 1`] = `
{
  "next": {
    "next": {
      "next": null,
      "value": null,
    },
    "value": "https://jsonplaceholder.typicode.com",
  },
  "value": "http://ya.ru",
}
`;
